--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 adaptive = "1.1.0"
-agp = "8.9.0"
+agp = "8.9.1"
 aire = "0.15.5"
 avifCoderCoil = "2.0.10"
-benchmarkMacroJunit4 = "1.3.3"
+benchmarkMacroJunit4 = "1.3.4"
 biometric = "1.2.0-alpha05"
 appcompat = "1.7.0"
 composeVideo = "1.2.0"
@@ -16,7 +16,7 @@ jxlCoder = "2.1.10"
 kotlin = "2.1.10"
 kotlinCoroutinesVersion = "1.10.1"
 ksp = "2.1.10-1.0.29"
-core-ktx = "1.15.0"
+core-ktx = "1.16.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
@@ -26,21 +26,22 @@ activity-compose = "1.10.1"
 hilt = "2.55"
 hiltCommon = "1.2.0"
 material = "1.12.0"
-material3 = "1.3.1"
+material3 = "1.3.2"
 media3Exoplayer = "1.5.1"
+metadataExtractor = "2.19.0"
 navigation-runtime-ktx = "2.8.9"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.4.1"
-room = "2.6.1"
+room = "2.7.0"
 accompanist = "0.37.2"
-datastore = "1.1.3"
-securityCrypto = "1.1.0-alpha06"
+datastore = "1.1.4"
+securityCrypto = "1.1.0-alpha07"
 sketch = "4.0.4"
 startupRuntime = "1.2.0"
 tensorflowLite = "2.16.1"
 tensorflowLiteTaskVision = "0.4.4"
 uiautomator = "2.3.0"
-composealpha = "1.8.0-rc01"
+composealpha = "1.8.0-rc03"
 kotlinxSerializationJson = "1.8.0"
 workRuntimeKtx = "2.10.0"
 zoomimageViewSketch = "1.1.2"
@@ -108,6 +109,7 @@ androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navig
 # Room
 jxl-coder-coil = { module = "com.github.awxkee:jxl-coder-coil", version.ref = "jxlCoder" }
 lazycolumnscrollbar = { module = "com.github.nanihadesuka:LazyColumnScrollbar", version.ref = "lazycolumnscrollbar" }
+metadata-extractor = { module = "com.drewnoakes:metadata-extractor", version.ref = "metadataExtractor" }
 pinchzoomgrid = { module = "io.github.dokar3:pinchzoomgrid", version.ref = "pinchzoomgrid" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
