--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 adaptive = "1.1.0"
-agp = "8.9.1"
+agp = "8.9.2"
 aire = "0.15.5"
 avifCoderCoil = "2.0.10"
 benchmarkMacroJunit4 = "1.3.4"
@@ -10,7 +10,7 @@ composeVideo = "1.2.0"
 core = "1.11.1"
 coreSplashscreen = "1.0.1"
 fuzzywuzzy = "1.4.0"
-exifinterface = "1.4.0"
+exifinterface = "1.4.1"
 graphicsShapes = "1.0.1"
 jxlCoder = "2.1.10"
 kotlin = "2.1.10"
@@ -21,7 +21,7 @@ junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
 lazycolumnscrollbar = "2.2.0"
-lifecycle-runtime = "2.8.7"
+lifecycle-runtime = "2.9.0"
 activity-compose = "1.10.1"
 hilt = "2.55"
 hiltCommon = "1.2.0"
@@ -29,24 +29,24 @@ material = "1.12.0"
 material3 = "1.3.2"
 media3Exoplayer = "1.5.1"
 metadataExtractor = "2.19.0"
-navigation-runtime-ktx = "2.8.9"
+navigation-runtime-ktx = "2.9.0"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.4.1"
-room = "2.7.0"
+room = "2.7.1"
 accompanist = "0.37.2"
-datastore = "1.1.4"
+datastore = "1.1.6"
 securityCrypto = "1.1.0-alpha07"
 sketch = "4.0.4"
 startupRuntime = "1.2.0"
 tensorflowLite = "2.16.1"
 tensorflowLiteTaskVision = "0.4.4"
 uiautomator = "2.3.0"
-composealpha = "1.8.0-rc03"
+composealpha = "1.8.1"
 kotlinxSerializationJson = "1.8.0"
-workRuntimeKtx = "2.10.0"
+workRuntimeKtx = "2.10.1"
 zoomimageViewSketch = "1.1.2"
 rules = "1.6.1"
-lifecycleProcess = "2.8.7"
+lifecycleProcess = "2.9.0"
 
 [libraries]
 # AndroidX
