--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,20 @@
 [versions]
-adaptive = "1.1.0"
+adaptive = "1.2.0"
 agp = "8.13.0"
 aire = "0.18.1"
 avifCoderCoil = "2.1.2"
 benchmarkMacroJunit4 = "1.4.1"
 biometric = "1.2.0-alpha05"
 appcompat = "1.7.1"
-composeVideo = "1.2.0"
 core = "1.45.0"
-coreSplashscreen = "1.0.1"
+coreSplashscreen = "1.2.0"
 exifinterface = "1.4.1"
 fuzzywuzzyKotlin = "1.0.1"
-graphicsShapes = "1.0.1"
+graphicsShapes = "1.1.0"
 haze = "1.6.10"
 hazeMaterials = "1.6.10"
 jxlCoder = "2.1.10"
-kotlin = "2.2.20"
+kotlin = "2.2.21"
 kotlinCoroutinesVersion = "1.10.2"
 ksp = "2.2.20-2.0.3"
 core-ktx = "1.17.0"
@@ -28,28 +27,27 @@ activity-compose = "1.11.0"
 hilt = "2.57.2"
 hiltCommon = "1.3.0"
 material = "1.13.0"
-material3 = "1.5.0-alpha04"
+material3 = "1.5.0-alpha08"
 media3Exoplayer = "1.8.0"
 metadataExtractor = "2.19.0"
-navigation-runtime-ktx = "2.9.5"
-onnxruntimeAndroidQnn = "1.23.0"
+navigation-runtime-ktx = "2.9.6"
+onnxruntimeAndroidQnn = "1.23.2"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.4.1"
-room = "2.8.1"
+room = "2.8.3"
 accompanist = "0.37.3"
 datastore = "1.1.4"
 securityCrypto = "1.1.0"
 sketch = "4.3.1"
 startupRuntime = "1.2.0"
 uiautomator = "2.3.0"
-composealpha = "1.10.0-alpha04"
+composealpha = "1.10.0-beta02"
 kotlinxSerializationJson = "1.9.0"
-workRuntimeKtx = "2.10.5"
+workRuntimeKtx = "2.11.0"
 zoomimage = "1.4.0"
 lifecycleProcess = "2.9.4"
 glide-compose = "1.0.0-beta01"
 glide-ksp = "5.0.4"
-junitKtx = "1.3.0"
 
 [libraries]
 # AndroidX
@@ -163,7 +161,6 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
-androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
